make round replay button work

--- a/yogsite/templates/rounds.html
+++ b/yogsite/templates/rounds.html
@@ -41,7 +41,7 @@
 							<td>{{ round.station_name }}</td>
 
 							<td>
-								<a class="button">Replay</a>
+								<a class="button" href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}" target="_blank">Replay</a>
 							</td>
 						</tr>
 					{% endfor %}
