--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -33,9 +33,9 @@
 					v-on:click="nav_open = !nav_open"
 					v-bind:class="{ 'is-active' : nav_open }"
 				>
-					<span aria-hidden="true"></span> <!-- magic to make the burger button appear -->
-					<span aria-hidden="true"></span>
-					<span aria-hidden="true"></span>
+					<span></span> <!-- magic to make the burger button appear -->
+					<span></span>
+					<span></span>
 				</a>
 			</div>
 			
