--- a/yogsite/templates/macros.html
+++ b/yogsite/templates/macros.html
@@ -1,3 +1,4 @@
+{# To whoever has to fix this in the future, I'm sorry - qwerty #}
 {% macro pagination(current_page, page_count) %}
 	<nav class="pagination is-centered" role="navigation" aria-label="pagination">
 
