--- a/yogsite/templates/macros.html
+++ b/yogsite/templates/macros.html
@@ -42,3 +42,23 @@
 		</ul>
 	</nav>
 {% endmacro %}
+
+{% macro search_form(default_value, placeholder_text) %}
+	<form id="search-form">
+		<div class="field">
+			<div class="control has-icons-left">
+				<input name="query" class="input" type="text"
+
+				placeholder="{{ placeholder_text }}"
+
+				{% if default_value %}
+					value="{{ default_value }}"
+				{% endif %}
+			/>
+				<span class="icon is-small is-left">
+					<i class="fas fa-search"></i>
+				</span>
+			</div>
+		</div>
+	<form>
+{% endmacro %}
