proper admin account login system

--- a/yogsite/templates/donate.html
+++ b/yogsite/templates/donate.html
@@ -7,6 +7,9 @@
 {% endblock %}
 
 {% block content %}
+
+	<h2 class="title is-2 has-text-centered">Donation Form</h2>
+
 	<div class="columns is-centered">
 		<div class="column is-half">
 			<form id="donate-form">
