--- a/yogsite/templates/bans/bans.html
+++ b/yogsite/templates/bans/bans.html
@@ -29,6 +29,9 @@
 						<th>Admin</th>
 						<th>Status</th>
 						<th>Unbanner</th>
+						{% if admin_perms.can_manage_bans() %}
+							<th>Tools</th>
+						{% endif %}
 					</tr>
 				</thead>
 				<tbody>
@@ -52,7 +55,7 @@
 
 							<td>
 								{% if ban.unbanned_datetime %}
-									<div class="tag is-success is-medium has-text-centered">Unbanned</div>
+									<div class="tag is-success is-medium has-text-centered">Revoked</div>
 								{% elif ban.expiration_time and datetime.utcnow() > ban.expiration_time %}
 									<div class="tag is-primary is-medium has-text-centered">Expired</div>
 								{% else %}
@@ -61,6 +64,12 @@
 							</td>
 
 							<td>{{ ban.unbanned_ckey if ban.unbanned_ckey else "N/A" }}</td>
+
+							{% if admin_perms.can_manage_bans() %}
+								<td>
+									<a class="button" href="/bans/{{ ban.id }}/edit">Edit</a>
+								</td>
+							{% endif %}
 						</tr>
 					{% endfor %}
 				</tbody>
