--- a/yogsite/templates/bans/edit.html
+++ b/yogsite/templates/bans/edit.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% from 'macros.html' import pagination, search_form with context %}
+{% from 'macros.html' import form_errors with context %}
 
 {% block title %}Bans - {{ ban.id }} - Edit{% endblock %}
 
@@ -14,7 +14,10 @@
 
 	<div class="columns is-centered">
 		<div class="column is-four-fifths">
-			<form id="edit-ban-form">
+			<form id="edit-ban-form" method="POST">
+
+				{{ form.csrf_token }}
+
 				<div class="columns">
 
 					<div class="column is-half">
@@ -22,7 +25,7 @@
 						<div class="field">
 							<div class="label">CKEY</div>
 							<div class="control has-icons-left">
-								<input name="ckey" class="input is-fullwidth" type="text" value="{{ ban.ckey }}" placeholder="Enter the CKEY of the user..." />
+								{{ form.ckey(class_="input is-fullwidth", placeholder="Enter the CKEY of the user...") }}
 
 								<span class="icon is-small is-left">
 									<i class="fas fa-user"></i>
@@ -33,7 +36,7 @@
 						<div class="field">
 							<div class="label">Ban Reason</div>
 							<div class="control">
-								<textarea name="reason" class="textarea is-fullwidth" rows="7" placeholder="Enter the reason for the ban...">{{ ban.reason }}</textarea>
+								{{ form.reason(class_="textarea is-fullwidth", placeholder="Enter the reason for the ban...", rows="7") }}
 							</div>
 						</div>
 
@@ -44,8 +47,7 @@
 						<div class="field">
 							<div class="label">Expiration Time</div>
 							<div class="control has-icons-left">
-								<input name="expiration_time" class="input is-fullwidth" type="datetime-local" value="{{ ban.expiration_time.isoformat(sep='T', timespec='auto') if ban.expiration_time else "Never" }}" />
-
+								{{ form.expiration_time(class_="input is-fullwidth") }}
 								<span class="icon is-small is-left">
 									<i class="fas fa-clock"></i>
 								</span>
@@ -55,14 +57,9 @@
 						<div class="field">
 							<div class="label">Ban Role</div>
 							<div class="control">
+								
 								<div class="select is-fullwidth">
-									<select name="role">
-										{% for role_name in cfg.roles %}
-											<option value="{{ role_name }}" {% if role_name == ban.role %}selected{% endif %}>
-												{{ role_name }}
-											</option>
-										{% endfor %}
-									</select>
+									{{ form.role() }}
 								</div>
 							</div>
 						</div>
@@ -72,7 +69,7 @@
 								<div class="label">IP</div>
 								<div class="field has-addons">
 									<div class="control is-expanded has-icons-left">
-										<input id="input-ip" name="ip" class="input" type="text" value="{{ util.IPAddress(ban.ip) }}" placeholder="IP Address (optional)" />
+										{{ form.ip(class_="input", placeholder="IP Address (optional)") }}
 
 										<span class="icon is-small is-left">
 											<i class="fas fa-server"></i>
@@ -95,7 +92,7 @@
 								<div class="label">CID</div>
 								<div class="field has-addons">
 									<div class="control is-expanded has-icons-left">
-										<input id="input-computerid" name="computerid" class="input" type="text" value="{{ ban.computerid }}" placeholder="Computer ID (optional)" />
+										{{ form.computerid(class_="input", placeholder="Computer ID (optional)") }}
 
 										<span class="icon is-small is-left">
 											<i class="fas fa-address-card"></i>
@@ -132,6 +129,8 @@
 					</div>
 				</div>
 			</form>
+
+			{{ form_errors(form) }}
 		</div>
 	</div>
 {% endblock %}
