mega wip user directory and player page

--- a/yogsite/templates/bans/edit.html
+++ b/yogsite/templates/bans/edit.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% from 'macros.html' import form_errors with context %}
+{% from 'util/macros.html' import form_errors with context %}
 
 {% block title %}Bans - {{ ban.id }} - Edit{% endblock %}
 
