--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -46,6 +46,7 @@
 				<div class="navbar-end">
 					<a class="navbar-item" href="/forums">Forums</a>
 					<a class="navbar-item" href="/wiki">Wiki</a>
+					<a class="navbar-item" href="/players">Directory</a>
 					<a class="navbar-item" href="/bans">Ban List</a>
 					<a class="navbar-item" href="/rounds">Round List</a>
 					<a class="navbar-item" href="/library">Library</a>
