--- a/yogsite/templates/bans/bans.html
+++ b/yogsite/templates/bans/bans.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
-{% from 'macros.html' import pagination, search_form with context %}
+{% from 'util/macros.html' import pagination, search_form with context %}
+{% from 'bans/macros.html' import ban_listing with context %}
 
 {% block title %}Bans{% endblock %}
 
@@ -18,71 +19,7 @@
 
 			{{ pagination(page, page_count) }}
 
-			<table class="table is-striped is-hoverable is-fullwidth">
-				<thead>
-					<tr>
-						<th>CKEY</th>
-						<th>Type</th>
-						<th>Reason</th>
-						<th width="150px">Ban Date</th>
-						<th width="150px">Expire Date</th>
-						<th>Admin</th>
-						<th>Status</th>
-						<th>Unbanner</th>
-						{% if admin_perms.can_manage_bans() %}
-							<th>Tools</th>
-						{% endif %}
-					</tr>
-				</thead>
-				<tbody>
-					{% for ban in bans %}
-						<tr>
-							<td>{{ ban.ckey }}</td>
-
-							<td>{{ ban.role }}</td>
-
-							<td>{{ ban.reason }}</td>
-
-							<td><time datetime="{{ ban.bantime }}">{{ util.readable_time_delta(ban.bantime) }}</time></td>
-							
-							{% if ban.expiration_time %}
-								<td><time datetime="{{ ban.expiration_time }}">{{ util.readable_time_delta(ban.expiration_time) }}</time></td>
-							{% else %}
-								<td>Never</td>
-							{% endif %}
-
-							<td>{{ ban.a_ckey }}</td>
-
-							<td>
-								{% if ban.unbanned_datetime %}
-									<div class="tag is-success is-medium has-text-centered">Revoked</div>
-								{% elif ban.expiration_time and datetime.utcnow() > ban.expiration_time %}
-									<div class="tag is-primary is-medium has-text-centered">Expired</div>
-								{% else %}
-									<div class="tag is-danger is-medium has-text-centered">Active</div>
-								{% endif %}
-							</td>
-
-							<td>{{ ban.unbanned_ckey if ban.unbanned_ckey else "N/A" }}</td>
-
-							{% if admin_perms.can_manage_bans() %}
-								<td>
-									<div class="buttons">
-										<a class="button" href="/bans/{{ ban.id }}/edit">Edit</a>
-
-										{% if ban.unbanned_datetime %}
-											<a class="button" href="/bans/{{ ban.id }}/reinstate">Reinstate</a>
-										{% else %}
-											<a class="button" href="/bans/{{ ban.id }}/revoke">Revoke</a>
-										{% endif %}
-									</div>
-								</td>
-							{% endif %}
-
-						</tr>
-					{% endfor %}
-				</tbody>
-			</table>
+			{{ ban_listing(bans) }}
 
 			{{ pagination(page, page_count) }}
 		</div>
