--- a/yogsite/templates/directory/player.html
+++ b/yogsite/templates/directory/player.html
@@ -22,6 +22,8 @@
 				</div>
 			</div>
 			
+			<h2 class="title is-3 has-text-centered">Statistics</h2>
+
 			<div class="columns">
 				<div class="column is-one-fourth">
 					<div class="box has-text-centered">
@@ -49,19 +51,65 @@
 				</div>
 			</div>
 
+			<br/>
+
+			<h2 class="title is-3 has-text-centered">Play Time</h2>
+
+			<div class="columns">
+				<div class="column is-one-fourth">
+					<div class="box has-text-centered">
+						<p class="title is-4">Total</p>
+						<p class="subtitle is-4">{{ ((player.get_role_time("Living") + player.get_role_time("Ghost")) / 60) | round | int }} hours</p> {# TODO: optimize #}
+					</div>
+				</div>
+				<div class="column is-one-fourth">
+					<div class="box has-text-centered">
+						<p class="title is-4">Living</p>
+						<p class="subtitle is-4">{{ (player.get_role_time("Living") / 60) | round | int }} hours</p> {# temporary until I get deaths table TODO: fix #}
+					</div>
+				</div>
+				<div class="column is-one-fourth">
+					<div class="box has-text-centered">
+						<p class="title is-4">Ghost</p>
+						<p class="subtitle is-4">{{ (player.get_role_time("Ghost") / 60) | round | int }} hours</p>
+					</div>
+				</div>
+				<div class="column is-one-fourth">
+					<div class="box has-text-centered">
+						<p class="title is-4">Favorite Job</p>
+
+						{% set favorite_job = player.get_favorite_job() %}
+
+						<p class="subtitle is-4">{{  favorite_job.job | title }} ({{ (favorite_job.minutes / 60) | round | int }}h)</p>
+					</div>
+				</div>
+			</div>
+
 			{% if admin_perms.can_manage_bans() %}
-				<h2 class="title is-2 has-text-centered">Bans</h2>
+				<br/>
+
+				<h2 class="title is-3 has-text-centered">Bans</h2>
 				
 				{% if player.bans %}
 					{{ ban_listing(player.bans, show_ckey=False) }}
+				{% else %}
+					<div class="box has-text-centered">
+						<p class="subtitle is-5">This user has no bans in the database</p>
+					</div>
 				{% endif %}
 			{% endif %}
 
 			{% if admin_perms.can_manage_notes() %}
-				<h2 class="title is-2 has-text-centered">Notes</h2>
+				<br/>
+
+				<h2 class="title is-3 has-text-centered">Notes</h2>
 
 				{% if player.bans %}
 					{{ note_listing(player.notes, show_ckey=False) }}
+				{% else %}
+					<div class="box has-text-centered">
+						<p class="subtitle is-5">This user has no notes in the database</p>
+					</div>
 				{% endif %}
 			{% endif %}
 		</div>
