notes table no longer appears when they dont exist

--- a/yogsite/templates/directory/player.html
+++ b/yogsite/templates/directory/player.html
@@ -104,7 +104,7 @@
 
 				<h2 class="title is-3 has-text-centered">Notes</h2>
 
-				{% if player.bans %}
+				{% if player.notes %}
 					{{ note_listing(player.notes, show_ckey=False) }}
 				{% else %}
 					<div class="box has-text-centered">
