--- a/yogsite/templates/home.html
+++ b/yogsite/templates/home.html
@@ -1,3 +1,58 @@
 {% extends "layout.html" %}
 
 {% block title %}Home{% endblock %}
+
+{% block head %}
+	<script src="/static/js/home.js"></script>
+{% endblock %}
+
+{% block content %}
+
+	<h1 class="title is-1 has-text-centered">YogStation 13</h1>
+
+	<div class="columns is-centered">
+		<div class="column is-two-thirds">
+			
+			<div class="card">
+				<div class="card-content">
+					<div class="media">
+						<div class="media-content">						
+							<div class="columns">
+								<div class="column is-one-quarter">
+									<p class="title is-3">YogStation Main</p>
+									<p class="subtitle is-5">game.yogstation.net:4133</p>
+								</div>
+								
+								<div class="column has-text-centered">
+									<p class="title is-4">Players</p>
+									<p class="subtitle is-4">45/82</p>
+								</div>
+
+								<div class="column has-text-centered">
+									<p class="title is-4">Admins</p>
+									<p class="subtitle is-4">6</p>
+								</div>
+
+								<div class="column has-text-centered">
+									<p class="title is-4">Map</p>
+									<p class="subtitle is-4">YogStation</p>
+								</div>
+
+								<div class="column has-text-centered">
+									<p class="title is-4">Duration</p>
+									<p class="subtitle is-4">12:32</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				
+					<div class="content">
+						<div class="buttons is-right">
+							<a class="button is-primary is-medium">Join</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock %}
