basic skeleton of admin management page

--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -51,6 +51,30 @@
 					<a class="navbar-item" href="/rounds">Round List</a>
 					<a class="navbar-item" href="/library">Library</a>
 					<a class="navbar-item" href="/donate">Donate</a>
+					
+					{% if admin_account %}
+						<div class="navbar-item has-dropdown is-hoverable">
+							<a class="navbar-link">Admin</a>
+
+							<div class="navbar-dropdown">
+								{% if admin_perms.can_manage_admins() %}
+									<a class="navbar-item" href="/admin/admins">Admins</a>
+								{% endif %}
+
+								{% if admin_perms.can_manage_donors() %}
+									<a class="navbar-item" href="/admin/donors">Donors</a>
+								{% endif %}
+
+								{% if admin_perms.can_manage_mentors() %}
+									<a class="navbar-item" href="/admin/mentors">Mentors</a>
+								{% endif %}
+
+								{% if admin_perms.can_view_activity_log() %}
+									<a class="navbar-item" href="/admin/activity">Activity</a>
+								{% endif %}
+							</div>
+						</div>
+					{% endif %}
 				</div>
 			</div>
 		</nav>
