--- a/yogsite/templates/admin/manage_admins.html
+++ b/yogsite/templates/admin/manage_admins.html
@@ -162,7 +162,7 @@
 
 								<td>
 									<div class="buttons">
-										<a class="button" href="/admin/loa/{{ loa.id }}/Revoke">Revoke</a>
+										<a class="button" href="/admin/loa/{{ loa.id }}/revoke">Revoke</a>
 									</div>
 								</td>
 							</tr>
