--- a/yogsite/templates/rounds/rounds.html
+++ b/yogsite/templates/rounds/rounds.html
@@ -50,10 +50,13 @@
 							<td>{{ round.station_name }}</td>
 
 							<td>
-								<a class="button" href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}" target="_blank">Replay</a>
-								{% if admin_perms.can_view_logs() %}
-									<a class="button" href="/rounds/{{ round.id }}/logs">Logs</a>
-								{% endif %}
+								<div class="buttons">
+									<a class="button" href="https://yogstation13.github.io/demo-viewer/?roundid={{ round.id }}" target="_blank">Replay</a>
+									
+									{% if admin_perms.can_view_logs() %}
+										<a class="button" href="/rounds/{{ round.id }}/logs">Logs</a>
+									{% endif %}
+								</div>
 							</td>
 						</tr>
 					{% endfor %}
