--- a/yogsite/templates/directory/player.html
+++ b/yogsite/templates/directory/player.html
@@ -31,10 +31,18 @@
 						<p class="subtitle is-4">{{ player.get_connection_count() }}</p>
 					</div>
 				</div>
+
 				<div class="column is-one-fourth">
 					<div class="box has-text-centered">
 						<p class="title is-4">Deaths</p>
 						<p class="subtitle is-4">{{ 9999 }}</p> {# temporary until I get deaths table TODO: fix #}
+					</div>
+				</div>
+
+				<div class="column is-one-fourth">
+					<div class="box has-text-centered">
+						<p class="title is-4">Rounds Played</p>
+						<p class="subtitle is-4">{{ player.get_round_count() }}</p> {# temporary until I finish this TODO: fix #}
 					</div>
 				</div>
 			</div>
