--- a/yogsite/templates/login/login.html
+++ b/yogsite/templates/login/login.html
@@ -15,9 +15,9 @@
 				
 				<form id="login-form" method="POST">
 					<div class="field">
-						<div class="label">CKEY</div>
+						<div class="label">Username</div>
 						<div class="control has-icons-left">
-							<input name="ckey" class="input" type="text" maxlength="32" placeholder="Enter your CKEY here..." />
+							<input name="username" class="input" type="text" maxlength="32" placeholder="Enter your username..." />
 
 							<span class="icon is-small is-left">
 								<i class="fas fa-user"></i>
