--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -57,7 +57,7 @@
 							<a class="navbar-link">Admin</a>
 
 							<div class="navbar-dropdown">
-								<a class="navbar-item" href="/admin/admins">Admins</a>
+								<a class="navbar-item" href="/admin/action_log">Action Log</a>
 								<a class="navbar-item" href="/admin/donors">Donors</a>
 								<a class="navbar-item" href="/admin/mentors">Mentors</a>
 								<a class="navbar-item" href="/admin/activity">Activity</a>
