--- a/yogsite/templates/layout.html
+++ b/yogsite/templates/layout.html
@@ -58,6 +58,7 @@
 
 							<div class="navbar-dropdown">
 								<a class="navbar-item" href="/admin/action_log">Action Log</a>
+								<a class="navbar-item" href="/admin/loa">LOAs</a>
 								<a class="navbar-item" href="/admin/donors">Donors</a>
 								<a class="navbar-item" href="/admin/mentors">Mentors</a>
 								<a class="navbar-item" href="/admin/activity">Activity</a>
