--- a/yogsite/templates/admin/loa_manager.html
+++ b/yogsite/templates/admin/loa_manager.html
@@ -31,10 +31,14 @@
 						</div>
 					</div>
 
-					<button class="button is-success is-pulled-right">Set LOA</button>
+					<div class="field has-text-right">
+						<button class="button is-success">Set LOA</button>
+					</div>
 		
 					{{ form_errors(form_set_loa) }}
 			</form>
+
+			<br/>
 
 			<div class="box">
 				<table class="table is-striped is-hoverable is-fullwidth">
