basic ban adding

--- a/yogsite/templates/directory/player.html
+++ b/yogsite/templates/directory/player.html
@@ -123,7 +123,9 @@
 			<br/>
 
 			<h2 class="title is-3 has-text-centered">Bans</h2>
-			
+
+			<a href="/bans/add?ckey={{ player.ckey }}" class="button is-primary is-pulled-right">Add Ban</a>
+
 			{% if player.bans %}
 				{{ ban_listing(player.bans, show_ckey=False) }}
 			{% else %}
