--- a/yogsite/templates/admin/activity_tracker.html
+++ b/yogsite/templates/admin/activity_tracker.html
@@ -10,21 +10,62 @@
 
 {% block content %}
 
-<div id="activity-tracker">
-	<table class="table">
-		<thead>
+<div id="activity-tracker">	
+	<div class="columns">
+		<div class="column is-3 field">
+			<div class="label">Start Date</div>
+			<div class="control has-icons-left">
+				<input class="input is-fullwidth" type="date" v-model="start_date" />
+			</div>
+		</div>
+
+		<div class="column is-3 field">
+			<div class="label">End Date</div>
+			<div class="control has-icons-left">
+				<input class="input is-fullwidth" type="date" v-model="end_date" />
+			</div>
+		</div>
+
+		<div class="column is-3 field">
+			<div class="label">Filter Rank</div>
+			<div class="control">
+				<div class="select is-fullwidth">
+					<select v-model="filter_rank">
+						<option>All</option>
+						{% for rank in admin_ranks %}
+						<option>{{ rank.rank }}</option>
+						{% endfor %}
+					</select>
+				</div>
+			</div>
+		</div>
+
+		<div class="column is-1"></div>
+
+		<div class="column is-2">
+			<div class="field is-pulled-right">
+				<div class="label">Apply</div>
+				<div class="control">
+					<button class="button" @click="update_week_from_api">Submit Changes</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<table class="table is-fullwidth is-striped is-hoverable">
+		<thead v-cloak>
 			<tr>
 				<th></th>
-				<th v-for="hour in 24">
+				<th style="min-width:40px; max-width:40px;" v-for="hour in 24">
 					${ hour }
 				</th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody v-cloak>
 			<tr v-for="day in 7">
 				<td>${ days_of_week[day-1] }</td>
 
-				<td v-for="hour in 24" :style="{'background-color': color_from_amount_active(week[day-1][hour-1])}">
+				<td style="min-width:40px; max-width:40px;" v-for="hour in 24" :style="{'background-color': color_from_amount_active(week[day-1][hour-1])}">
 					${ week[day-1][hour-1] }
 				</td>
 			</tr>
